--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(Secasy)
 set(CMAKE_C_STANDARD 11)
 set($ (pkg-config --cflags --libs glib-2.0))
 
-set(SOURCE_FILES main.c InitializationPhase.c ProcessingPhase.c SieveOfEratosthenes.c InitializationPhase.h Calculations.c Printing.c Calculation.h)
+set(SOURCE_FILES main.c Calculations.c InitializationPhase.c Printing.c ProcessingPhase.c SieveOfEratosthenes.c Calculations.h Defines.h InitializationPhase.h Printing.h ProcessingPhase.h SieveOfEratosthenes.h)
 add_executable(Secasy ${SOURCE_FILES})
 
 find_package(PkgConfig REQUIRED)
