Refactor: relocate avalanche test harness and fix build warnings
- Update avalanche.c and CMakeLists
- Move report and WSL script into structured subfolders (docs/, scripts/)
- Raise CMake minimum to 3.16; enforce C standard and add MinGW ANSI stdio
- Add proper (void) prototypes in headers; remove unused static decl
- Prepare for future warning cleanup (remaining indentation/sign compare)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
-cmake_minimum_required(VERSION 3.8)
+cmake_minimum_required(VERSION 3.16)
 project(Secasy C)
 
 set(CMAKE_C_STANDARD 11)
+set(CMAKE_C_STANDARD_REQUIRED ON)
+set(CMAKE_C_EXTENSIONS OFF)
 
 # Source files
 set(SOURCE_FILES
@@ -24,7 +26,7 @@ add_executable(Secasy ${SOURCE_FILES})
 
 # Avalanche test executable (exclude main.c, include avalanche.c)
 add_executable(SecasyAvalanche
-        avalanche.c
+    tests/avalanche/avalanche.c
         Calculations.c
         InitializationPhase.c
         Printing.c
@@ -39,6 +41,9 @@ add_executable(SecasyAvalanche
         SieveOfEratosthenes.h
         util.h)
 
+# Ensure subdirectory test sources can include headers at project root
+target_include_directories(SecasyAvalanche PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+
 # Large file support for Unix-like systems
 if (NOT WIN32)
     target_compile_definitions(Secasy PRIVATE _FILE_OFFSET_BITS=64)
@@ -52,6 +57,11 @@ if (MSVC)
 else()
     target_compile_options(Secasy PRIVATE -Wall -Wextra -Wundef -Wshadow -Wpointer-arith -Wstrict-prototypes -Wconversion -Wno-unused-parameter)
     target_compile_options(SecasyAvalanche PRIVATE -Wall -Wextra -Wundef -Wshadow -Wpointer-arith -Wstrict-prototypes -Wconversion -Wno-unused-parameter)
+    # Enable ANSI stdio on MinGW so %zu etc. are recognized and reduce format warnings
+    if (MINGW)
+        target_compile_definitions(Secasy PRIVATE __USE_MINGW_ANSI_STDIO=1)
+        target_compile_definitions(SecasyAvalanche PRIVATE __USE_MINGW_ANSI_STDIO=1)
+    endif()
 endif()
 
 # Optional: GTK3 (only if really needed)
